--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/extension-accelerate": "^1.3.0",
+    "date-fns": "^4.1.0",
+    "fns": "^1.0.0",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
@@ -22,10 +24,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "postcss": "^8.5.3",
     "prisma": "^6.5.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.17",
     "tsx": "^4.19.3",
     "typescript": "^5"
   }
