--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/extension-accelerate": "^1.3.0",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "fns": "^1.0.0",
     "lucide-react": "^0.484.0",
@@ -29,7 +31,6 @@
     "eslint-config-next": "15.2.4",
     "postcss": "^8.5.3",
     "prisma": "^6.5.0",
-    "tailwindcss": "^4.0.17",
     "tsx": "^4.19.3",
     "typescript": "^5"
   }
